tests/compile-fail/salsa_value_invalid_field_attributes.stderr
error: multiple `#[salsa_value]` attributes on field
 --> tests/compile-fail/salsa_value_invalid_field_attributes.rs:3:5
  |
3 | /     #[salsa_value(prove_safe_to_retain_manually)]
4 | |     #[salsa_value(prove_safe_to_retain_manually)]
5 | |     field: String,
  | |_________________^

error: expected `prove_safe_to_retain_manually`
  --> tests/compile-fail/salsa_value_invalid_field_attributes.rs:10:5
   |
10 | /     #[salsa_value(not_a_manual_proof)]
11 | |     field: String,
   | |_________________^

error: `#[salsa_value(prove_safe_to_retain_manually)]` cannot be used with `#[salsa::input]`
  --> tests/compile-fail/salsa_value_invalid_field_attributes.rs:16:5
   |
16 | /     #[salsa_value(prove_safe_to_retain_manually)]
17 | |     field: String,
   | |_________________^

error: cannot find attribute `salsa_value` in this scope
  --> tests/compile-fail/salsa_value_invalid_field_attributes.rs:16:7
   |
16 |     #[salsa_value(prove_safe_to_retain_manually)]
   |       ^^^^^^^^^^^
   |
   = note: `salsa_value` is an attribute that can be used by the derive macro `SalsaValue`, you might be missing a `derive` attribute
